# lightshifters

./: .gitignore  lightshifters.workspace  lightshifters.workspace.oliver  lightshifters.workspace.session
sandbox/: CMakeLists.txt  sandbox.project
sandbox/src/: Matrix.cpp  Matrix.h  PacketType.h  PlayerID.h  Quaternion.cpp  Quaternion.h  RenderableID.h  Vector.cpp  Vector.h  bullet.cpp  bullet.h  client_page.cpp  client_page.h  config.cpp  config.h  default_page.cpp  default_page.h  demo_page.cpp  demo_page.hpp  keybindings_page.cpp  keybindings_page.hpp  line.cpp  line.hpp  main.cpp  main_menu_page.cpp  main_menu_page.hpp  optional.hpp  packet.cpp  packet.h  page.cpp  page.h  page_manager.cpp  page_manager.h  player.cpp  player.h  renderable.cpp  renderable.h  server_entity.cpp  server_entity.h  server_page.cpp  (+7 more)
sandbox_msvc/: sandbox_msvc.project
